third_party/move/tools/move-decompiler/tests/compiler-v2-test/checking/typing/module_call_entry_function.exp
module 0x2::Y {
    friend fun f_friend() {
        ()
    }
}

module 0x2::X {
    public fun f_public() {
        ()
    }
    public entry fun f_script() {
        ()
    }
}

module 0x2::M {
    use 0x2::Y;
    use 0x2::X;
    friend fun f_friend() {
        ()
    }
    public fun f_public() {
        ()
    }
    public entry fun f_script() {
        ()
    }
    fun f_private() {
        ()
    }
    public entry fun f_script_call_friend() {
        Y::f_friend();
    }
    public entry fun f_script_call_public() {
        X::f_public();
    }
    public entry fun f_script_call_script() {
        X::f_script();
    }
    public entry fun f_script_call_self_friend() {
        f_friend();
    }
    public entry fun f_script_call_self_private() {
        f_private();
    }
    public entry fun f_script_call_self_public() {
        f_public();
    }
    public entry fun f_script_call_self_script() {
        f_script();
    }
}

--- unable to recompile the decompiled code:
exiting with env checking errors
error: function `0x2::Y::f_friend` cannot be called from function `0x2::M::f_script_call_friend` because module `0x2::M` is not a `friend` of `0x2::Y`
   ┌─ module_call_entry_function.move:2:16
   │
 2 │     friend fun f_friend() {
   │                ^^^^^^^^ callee
   ·
32 │         Y::f_friend();
   │         ------------- called here
